# T-WEB-700-LYO_13

./: .editorconfig  .gitignore  docker-compose.yml  package-lock.json  package.json  text.txt
backend/: .gitignore  main.py  pyproject.toml
backend/config/: database.py
backend/controllers/: users.py
backend/routes/: global_preferences.py  preferences.py  user_informations.py  users.py
backend/schema/: Global_Preferences.py  Preferences.py  User.py  UserInformations.py
backend/services/: global_preferences.py  perferences.py  preferences.py  user_informations.py  users.py
backend/tests/e2e/: Preferences.postman_collection.json  Users.postman_collection.json
cryptaupe/: package-lock.json  package.json
cryptaupe/pages/: index.tsx
pages/: _app.tsx
